--- a/index.html
+++ b/index.html
@@ -75,18 +75,20 @@
 
                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
                    <em>The Graduate School at Northwestern University Internship</em> <br><br>
-                    <p class="xp"> 
-                        My project entailed the use of Molecular Dynamics (MD) Simulations to explore the DNA-Histone complex and the use of Linux terminal and Bash scripts <br>
-                    </p>
-                    <p class="xp">
-                        JAVA and FORTRAN scripts were used to define a system that utilized force fields such as harmonic bonds, angular potential, and Lennard-Jones potential <br>
-                    </p>
-                    <p class="xp">   
-                        Computationally modeled the nucleosome with GROMACS &mdash; a MD simulation software <br>
-                    </p>
-                    <p class="xp">
-                        Used Visual Molecular Dynamics (VMD) to analyze and refine our model parameters <br>
-                    </p>
+                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
+                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
+                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
+                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
+                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
+                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
+                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
+                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
+                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
+                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
+                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
+                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
+                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
+                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
                 </p>
             <!-- </div> -->
           </div>
