--- a/index.html
+++ b/index.html
@@ -55,11 +55,32 @@
                     <p>
                         <!-- <b><em>Coding Language & Software</em></b><br> -->
     
-                        <b>Programming:</b> Java, SQL, Bash, Python, HTML, CSS, PHP, JavaScript <br><br>
-                        <b>Software:</b> 
+                        <b>Programming:</b> 
                         <p>
-                            Linux, Windows, IntelliJ, MySQL, MAMP, VMware, Office360, Google Docs
-                        </p> 
+                            Java, Bash, Python, HTML, CSS, PHP, JavaScript, JQuery 
+                        </p><br><br>
+                        <b>Database:</b> 
+                        <p>
+                            Teradata, DB2, SQL, AWS Redshift
+                        </p> <br><br>
+                        <b>IDE:</b> 
+                        <p>
+                            IntelliJ, PyCharm, STS, VS Code, Sublime Text, CoLab
+                        </p> <br><br>
+                        <b>DevOps & Software Tools:</b> 
+                        <p>
+                            Gitbash, Maven, Bamboo, Github, AWS, Azure VD, Docker, Jira, SPLUNK, POSTMAN, DbVisualizer, FileZilla, Excel
+                        </p><br><br>
+                          <b>Soft Skills:</b> 
+                        <p>
+                            Communication, Collaboration, Organization, Leadership, Time Management, Agile Methodologies
+                        </p><br><br>
+                        <b>Certification:</b> 
+                        <p>
+                           AWS Certified Cloud Practitioner - AWS Training/Udemy Business   May 2023                              
+                           Snowflake Architecture & Best Practices - Udemy Business         June 2023
+                           Spark and Python for Big Data with PySpark - Udemy Business      November 2022                                                     
+                        </p>
                     
                     </p>
                 </div>
@@ -73,22 +94,20 @@
                 <p>
                    <b>Work Experience</b><br>
 
-                   <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
-                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
-                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
-                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
-                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
-                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
-                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
-                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
-                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
-                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
-                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
-                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
-                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
-                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
-                    <strong class="strong">Summer Research Opportunity Program (SROP)</strong> - Evanston, IL                     June 2021 - July 2021 <br>
-                   <em>The Graduate School at Northwestern University Internship</em> <br><br>
+                   <strong class="strong">Software Engineer - Plano, TX                                               August 2023 -  Present <br>
+                   <em>Cognizant Technology Solutions</em> <br><br>
+                    <strong class="strong">ML Data Engineer</strong> - Plano, TX                                      August 2022 - August 2023 <br>
+                   <em>Cognizant Technology Solutions</em> <br><br>
+                    <strong class="strong">Infrastructure Engineer</strong> - Chicago, IL                             September 2021 - August 2022 <br>
+                   <em>Northeastern Illinois University</em> <br><br>
+                    <strong class="strong">Business Analyst, Project Manager</strong> - Chicago, IL                   June 2016 - April 2022 <br>
+                   <em>ECCO USA, Inc</em> <br><br>
+                    <strong class="strong">Java Developer - Researcher</strong> - Evanston, IL                        June 2021 - July 2021 <br>
+                   <em>The Graduate School at Northwestern University</em> <br><br>
+                    <strong class="strong">IT Support Engineer</strong> - Chicago, IL                                 October 2018 - June 2019 <br>
+                   <em>City Colleges of Chicago-Harry S. Truman</em> <br><br>
+                    <strong class="strong">Analyst - Financial Services</strong> - Chicago, IL                        February 2015 - April 2015 <br>
+                   <em>Ann & Robert H. Lurie Children's Hospital</em> <br><br>
                 </p>
             <!-- </div> -->
           </div>
