--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
                         <p>
                             Gitbash, Maven, Bamboo, Github, AWS, Azure VD, Docker, Jira, SPLUNK, POSTMAN, DbVisualizer, FileZilla, Excel
                         </p><br><br>
-                          <b>Soft Skills:</b> 
+                        <b>Soft Skills:</b> 
                         <p>
                             Communication, Collaboration, Organization, Leadership, Time Management, Agile Methodologies
                         </p><br><br>
                         <b>Certification:</b> 
                         <p>
-                           AWS Certified Cloud Practitioner - AWS Training/Udemy Business   May 2023                              
-                           Snowflake Architecture & Best Practices - Udemy Business         June 2023
+                           AWS Certified Cloud Practitioner - AWS Training/Udemy Business   May 2023 <br>                             
+                           Snowflake Architecture & Best Practices - Udemy Business         June 2023 <br> 
                            Spark and Python for Big Data with PySpark - Udemy Business      November 2022                                                     
                         </p>
                     
