--- a/index.html
+++ b/index.html
@@ -58,24 +58,19 @@
                         <b>Programming:</b> 
                         <p>
                             Java, Bash, Python, HTML, CSS, PHP, JavaScript, JQuery 
-                        </p><br><br>
-                        <b>Database:</b> 
+                        </p><br><br><b>Database:</b> 
                         <p>
                             Teradata, DB2, SQL, AWS Redshift
-                        </p> <br><br>
-                        <b>IDE:</b> 
+                        </p><br><br><b>IDE:</b> 
                         <p>
                             IntelliJ, PyCharm, STS, VS Code, Sublime Text, CoLab
-                        </p> <br><br>
-                        <b>DevOps & Software Tools:</b> 
+                        </p><br><br><b>DevOps & Software Tools:</b> 
                         <p>
                             Gitbash, Maven, Bamboo, Github, AWS, Azure VD, Docker, Jira, SPLUNK, POSTMAN, DbVisualizer, FileZilla, Excel
-                        </p><br><br>
-                        <b>Soft Skills:</b> 
+                        </p><br><br><b>Soft Skills:</b> 
                         <p>
                             Communication, Collaboration, Organization, Leadership, Time Management, Agile Methodologies
-                        </p><br><br>
-                        <b>Certification:</b> 
+                        </p><br><br><b>Certification:</b> 
                         <p>
                            AWS Certified Cloud Practitioner - AWS Training/Udemy Business   May 2023 <br>                             
                            Snowflake Architecture & Best Practices - Udemy Business         June 2023 <br> 
@@ -94,7 +89,7 @@
                 <p>
                    <b>Work Experience</b><br>
 
-                   <strong class="strong">Software Engineer - Plano, TX                                               August 2023 -  Present <br>
+                   <strong class="strong">Software Engineer</strong> - Plano, TX                                      August 2023 -  Present <br>
                    <em>Cognizant Technology Solutions</em> <br><br>
                     <strong class="strong">ML Data Engineer</strong> - Plano, TX                                      August 2022 - August 2023 <br>
                    <em>Cognizant Technology Solutions</em> <br><br>
