--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     AWS Certified Cloud Practitioner - AWS Training/Udemy Business   May 2023 <br>                             
                     Snowflake Architecture & Best Practices - Udemy Business         June 2023 <br> 
                     Spark and Python for Big Data with PySpark - Udemy Business      November 2022 
+                      
                  </p>
                 </div>
             </div>
@@ -69,7 +70,7 @@
                             IntelliJ, PyCharm, STS, VS Code, Sublime Text, CoLab
                         <br><br>
                         <b>DevOps & Software Tools</b> 
-                            Gitbash, Maven, Bamboo, Github, AWS, Azure VD, Docker, Jira, SPLUNK, POSTMAN, 
+                            Gitbash, Maven, Bamboo, Github, AWS, Azure VD, <br>Docker, Jira, SPLUNK, POSTMAN, 
                             DbVisualizer, FileZilla, Excel
                         <br><br>
                         <b>Soft Skills</b> 
@@ -85,19 +86,19 @@
           <div class="col col-3">
             <div class="work-experience">
 
-            </div><br>
+            </div>
             <!-- <div> -->
                 <h2>Experience</h2>
                 <p>
                    <b>Work Experience</b><br>
 
-                   <strong class="strong">Software Engineer</strong> - Plano, TX.                     August 2023 -  Present <br>
+                   <strong class="strong">ML Data Engineer/Software Engineer</strong> - Plano, TX.        August 2022 -  Present <br>
                    <em>Cognizant Technology Solutions</em> <br><br>
-                    <strong class="strong">ML Data Engineer</strong> - Plano, TX.                     August 2022 - August 2023 <br>
-                   <em>Cognizant Technology Solutions</em> <br><br>
+                   <!-- <strong class="strong">ML Data Engineer</strong> - Plano, TX.                     August 2022 - August 2023 <br>
+                   <em>Cognizant Technology Solutions</em> <br><br>-->
                     <strong class="strong">Infrastructure Engineer</strong> - Chicago, IL.            September 2021 - August 2022 <br>
                    <em>Northeastern Illinois University</em> <br><br>
-                    <strong class="strong">Business Analyst, Project Manager</strong> - Chicago, IL.  June 2016 - April 2022 <br>
+                    <strong class="strong">B.A., Project Manager</strong> - Chicago, IL.              June 2016 - April 2022 <br>
                    <em>ECCO USA, Inc</em> <br><br>
                     <strong class="strong">Java Developer - Researcher</strong> - Evanston, IL.       June 2021 - July 2021 <br>
                    <em>The Graduate School at Northwestern University</em> <br><br>
@@ -105,7 +106,6 @@
                    <em>City Colleges of Chicago-Harry S. Truman</em> <br><br>
                     <strong class="strong">Analyst - Financial Services</strong> - Chicago, IL.       February 2015 - April 2015 <br>
                    <em>Ann & Robert H. Lurie Children's Hospital</em> <br><br>
-
                 </p>
             <!-- </div> -->
           </div>
