--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <b>Education</b><br>
  
                     <strong class="strong">Northeastern Illinois University</strong> - Chicago, IL <br> August 2022 <br>
-                    Bachelor of Science, Computer Science - Cyber Security <br><br>
+                    Bachelor of Science, Computer Science - Cyber Security <br>
                     Relevant Courses: Data Structures, Algorithms, Cryptography, Computer Networks <br><br>
                     <strong class="strong">Harry S. Truman College</strong> - Chicago, IL <br> May 2019 <br>
                     Associate of Science, Computer Science  <br>
@@ -86,7 +86,7 @@
           <div class="col col-3">
             <div class="work-experience">
 
-            </div>
+            </div><br>
             <!-- <div> -->
                 <h2>Experience</h2>
                 <p>
